# room-chat-system

./: .gitignore  CMakeLists.txt  README.md  generate_certs.sh
src/: README.md
src/client/: CMakeLists.txt
src/client/gui/: .gitignore  actions.c  auxiliar.c  gtk_messages.c  header.c  notifies.c  resources.gresource.xml  view.c  view.cpp
src/client/gui/resources/: actions.ui  chat.ui  headers.ui  home.ui  invitation.ui  main_page.ui  message.ui  rows.ui  start.ui  window.ui
src/client/gui/resources/css/: actions.css  chat.css  headers.css  invitation.css  main_page.css  message.css  notifies.css  rows.css  start.css
src/client/include/: actions.h  auxiliar.h  chat_counter.hpp  client.hpp  controller.hpp  gtk_messages.h  header.h  idle.h  message.hpp  models.h  notifies.h  statuses.hpp  view.h  view.hpp  wrapper_controller.h
src/client/src/: client.cpp  controller.cpp  idle.c  main.cpp  message.cpp  wrapper_controller.cpp
src/client/ui/: view.cpp
src/server/: CMakeLists.txt
src/server/include/: message.h  room.h  server.h
src/server/src/: main.c  message.c  room.c  server.c
src/tests/: CMakeLists.txt
src/tests/test_client/: CMakeLists.txt
src/tests/test_server/: CMakeLists.txt
